[package]
name = "home2-api"
version = "0.1.0"
authors = ["Roman Nazarenko <me@jtalk.me>"]
edition = "2021"

[package.metadata.scripts]
"run:watch" = "cargo watch -x run"
"build:watch" = "cargo watch"
"test:watch" = "cargo watch -x test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
chrono = { version = "~0.4", features = ["serde"] }
derive_more = "~0.99"
envy = "~0.4"
http = "~0.2"
log = "~0.4"
merge = "~0.1"
mockall_double = "~0.2"
mongodb = { version = "~2", features = ["tokio-runtime"] }
serde = "~1"
simplelog = "~0.10"
uuid = { version = "~0.8", features = ["serde"] }

[dev-dependencies]
mockall = "~0.10"
spectral = "~0.6"

