[package]
name = "home2-api"
version = "0.1.0"
authors = ["Roman Nazarenko <me@jtalk.me>"]
edition = "2021"

[package.metadata.scripts]
"run:watch" = "cargo watch -x run"
"build:watch" = "cargo watch"
"test:unit" = "cargo test --bins"
"test:unit:watch" = "cargo watch -x 'run-script test:unit'"
"test:integration" = "cargo test --test '*'"
"test:integration:watch" = "cargo watch -x 'run-script test:integration'"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.13"
actix-session = "0.5.0-beta.4"
awc = "3.0.0-beta.12"
base64 = "~0.13"
base64ct = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }
derive_more = "~0.99"
duration-string = { version = "0.0.6", features = ["serde"] }
envy = "~0.4"
futures = "~0.3"
http = "~0.2"
log = "~0.4"
merge = "~0.1"
mockall = "~0.10"
mockall_double = "~0.2"
mongodb = { version = "~2", features = ["tokio-runtime"] }
pbkdf2 = { version = "~0.10", features = ["password-hash", "std", "hmac", "simple"] }
rand = "~0.8"
rand_core = "~0.6"
serde = "~1"
serde_json = "~1"
simplelog = "~0.10"
time = "~0.2"
uuid = { version = "~0.8", features = ["serde"] }

[dev-dependencies]
rstest = "~0.11"
spectral = "~0.6"

